--- a/Day058/02-Bootstrap_Components/index.html
+++ b/Day058/02-Bootstrap_Components/index.html
@@ -89,7 +89,9 @@
           and experiences. That's why we take extra care to ensure that everything is packed and transported with the
           utmost
           care and attention.</p>
-        <a href="#" class="icon-link">Get a quote</a>
+        <a href="#" class="icon-link">Get a quote
+          <img src="./chevron-right.svg" alt="chevron-right">
+        </a>
       </div>
       <div class="feature col">
         <div
@@ -104,7 +106,9 @@
           new home. And with our transparent pricing and no hidden fees, you can trust that you're getting a fair and
           competitive
           rate for our services.</p>
-        <a href="#" class="icon-link">Get a quote</a>
+        <a href="#" class="icon-link">Get a quote
+          <img src="./chevron-right.svg" alt="chevron-right">
+        </a>
       </div>
       <div class="feature col">
         <div
@@ -119,8 +123,44 @@
           more personalized experience for our customers. Contact us today to learn more about how we can help you with
           your next
           move.</p>
-        <a href="#" class="icon-link">Get a quote</a>
+        <a href="#" class="icon-link">Get a quote
+          <img src="./chevron-right.svg" alt="chevron-right">
+        </a>
       </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div id="carouselExampleIndicators" class="carousel slide">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+          aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+          aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./couple.jpg" class="d-block w-100" alt="couple">
+        </div>
+        <div class="carousel-item">
+          <img src="./dog.jpg" class="d-block w-100" alt="dog">
+        </div>
+        <div class="carousel-item">
+          <img src="./family.jpg" class="d-block w-100" alt="family">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
   </div>
 
