--- a/Day058/03-TinDog_Project/index.html
+++ b/Day058/03-TinDog_Project/index.html
@@ -48,7 +48,7 @@
   <!-- Features -->
   <section id="features">
 
-    <div class="container px-4 py-5" id="hanging-icons">
+    <div class="container px-4 py-5 mt-5" id="hanging-icons">
       <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
         <div class="col d-flex align-items-start">
           <div
@@ -102,6 +102,34 @@
   </section>
   <!-- Testimonial -->
   <section id="testimonial">
+
+    <div class="my-5">
+      <div class="p-5 text-center bg-body-tertiary">
+        <div class="container py-5">
+          <h2 class="text-body-emphasis">"I no longer have to sniff other dogs for love. I've found the hottest Corgi on
+            TinDog. Woof."</h2>
+          <img class="profile-img mt-5" src="./images/dog-img.jpg" alt="dog">
+          <p class="col-lg-8 mx-auto lead">Pebbles, New York</p>
+        </div>
+        <div class="container text-center">
+          <div class="row">
+            <div class="col-xl-3 col-sm-12">
+              <img src="./images/techcrunch.png" alt="techcrunch-logo" height="35">
+            </div>
+            <div class="col-xl-3 col-sm-12">
+              <img src="./images/mashable.png" alt="mashable-logo" height="35">
+            </div>
+            <div class="col-xl-3 col-sm-12">
+              <img src="./images/bizinsider.png" alt="businesinsoder-logo" height="35">
+            </div>
+            <div class="col-xl-3 col-sm-12">
+              <img src="./images/tnw.png" alt="tnw-logo" height="35">
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
 
   </section>
   <!-- Pricing -->
